--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "home",
-  "private": true,
-  "version": "0.0.0",
+  "module": "index.ts",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "docs:dev": "vitepress dev docs --host",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
+  "private": true,
   "devDependencies": {
-    "@types/node": "^22.15.29",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vitepress": "^1.6.3",
-    "vue-tsc": "^2.2.8"
+    "@types/bun": "latest",
+    "vitepress": "^1.6.3"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
+  },
+  "scripts": {
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   }
 }
